insert to Note(void*) and read all by local type

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(ATD_FSoD)
 
 set(CMAKE_CXX_STANDARD 14)
 
-set(SOURCE_FILES main.cpp FSD.cpp FSD.h KP.h Note.h)
+set(SOURCE_FILES main.cpp myCW/FSD.cpp myCW/FSD.h myCW/KP.h myCW/Note.h)
 add_executable(ATD_FSoD ${SOURCE_FILES})
