--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(ATD_FSoD)
 
 set(CMAKE_CXX_STANDARD 14)
 
-set(SOURCE_FILES main.cpp FSD.cpp FSD.h KP.h Block.h)
+set(SOURCE_FILES main.cpp FSD.cpp FSD.h KP.h)
 add_executable(ATD_FSoD ${SOURCE_FILES})
